2000-04-28  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: 11013: Completion/Core/compinstall: more breaks and
	a completion context.

2000-04-28  Bart Schaefer  <schaefer@zsh.org>

	* 11012: Doc/Zsh/intro.yo, Doc/Zsh/manual.yo: Reorder menus
	to match sections in 11008.

2000-04-28  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11008: Doc/zsh.yo, Doc/Zsh/compctl.yo, Doc/Zsh/compsys.yo,
 	Doc/Zsh/compwid.yo, Doc/Zsh/modules.yo, Doc/Zsh/seealso.yo,
 	Doc/Zsh/zle.yo: move compctl docs behind compsys, mention
 	`zcompile -z' in compsys
	
	* 11007: Src/Zle/compmatch.c: misplaced cursor with partial-word
 	matching
	
	* Tanaka: 11001: Completion/User/_enscript, Completion/User/_lp,
	Completion/User/_printers: printer-detection moved to new
	_printers; used by _enscript

	* 11003: Src/Zle/computil.c: fix for reporting multiple actions in
 	comparguments, options with non-optional arguments
	
2000-04-28  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: 10999: Completion/Core/compinstall: some idiot didn't
	get searching of alternative files for definitions to work properly.

2000-04-28  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10992: Src/Zle/complist.c: avoid wrapping around both
 	horizontally and vertically at the same time
	
2000-04-27  Bart Schaefer  <schaefer@zsh.org>

	* Tanaka Akira: 10980: Completion for enscript.

2000-04-27  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10985: Completion/Core/compinstall: _oldlist, list-prompt and
	matcher-list enhancements.

2000-04-27  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10979: originally from Felix: 10894: Completion/Core/.distfiles,
	Completion/Core/_history, Doc/Zsh/compsys.yo: new _history completer
	
	* 10978: Src/Zle/complist.c: better wrap around for cursor
	movement widgets; avoid flicker when leaving menu-selection
	
	* 10977: and Andrej: 10976: Completion/User/_make: use $words[1]
 	to call make in _make and throw away stderr and use _call
	